tests/compilefail30.out
[1mtests/compilefail30.pas:4:15: [0m[1m[91merror:[0m Semicolon expected, cannot define a constant in terms of an expression
     4 | const two = 1 + 1;

